# high-throughput-interactive-app

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh  setup.sh
.github/workflows/: python-app.yml
data/EDX/2897_NdFeB/: 0UNTITLED2.opj  Global spectrum results.xlsx  Profile.rtj2  Protocol.xml  Spectrum results_(1,1).txt  Spectrum results_(1,10).txt  Spectrum results_(1,11).txt  Spectrum results_(1,12).txt  Spectrum results_(1,4).txt  Spectrum results_(1,6).txt  Spectrum results_(1,7).txt  Spectrum results_(1,8).txt  Spectrum results_(10,11).txt  Spectrum results_(10,16).txt  Spectrum results_(10,2).txt  Spectrum results_(10,5).txt  Spectrum results_(10,6).txt  Spectrum results_(10,8).txt  Spectrum results_(10,9).txt  Spectrum results_(11,1).txt  Spectrum results_(11,10).txt  (+433 more)
high-throughput-interactive-app/: EDX-dash.py
high-throughput-interactive-app/assets/: layout.css
high_throughput_interactive_app/: EDX-dash.py  __init__.py  dash_app.py
high_throughput_interactive_app/assets/: layout.css  layout_edx.css  layout_moke.css  layout_xrd.css
high_throughput_interactive_app/callbacks/: callbacks_edx.py  callbacks_moke.py  callbacks_xrd.py
high_throughput_interactive_app/functions/: edx.py  moke.py  xrd.py
high_throughput_interactive_app/interface/: widgets_edx.py  widgets_moke.py  widgets_xrd.py
high_throughput_interactive_app/internal_functions/: edx.py  moke.py  xrd.py
high_throughput_interactive_app/tests/: test_init.py
src/: EDX-dash.py  __init__.py
src/internal_functions/: edx.py
tests/: __init__.py
